--- a/views/patient_view.xml
+++ b/views/patient_view.xml
@@ -53,7 +53,7 @@
                         </group>
                         <notebook>
                             <page string="History">
-                                <field name="history_id">
+                                <field name="history_ids">
                                     <tree editable="bottom">
                                         <field name="write_uid" string="Create by"/>
                                         <field name="write_date" string="Date"/>
